@@ -106,7 +106,6 @@ Function Get-Java-Opts {
             $JAVA_OPTS += "--add-exports=java.base/sun.nio.ch=ALL-UNNAMED"
             $JAVA_OPTS += "--add-exports=jdk.unsupported/sun.misc=ALL-UNNAMED"
             $JAVA_OPTS += "--add-exports=jdk.unsupported/sun.reflect=ALL-UNNAMED"
-            $JAVA_OPTS += "--illegal-access=permit"
             $JAVA_OPTS += "--add-modules=java.se"
           }
         }
